correcting the alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -188,7 +188,7 @@ position:fixed;
 bottom: 0;
 margin-top: 10px;
 }
-#listen button{
+#list input{
 border-radius: 5px;
 box-shadow: 5px 8px 20px white;
 color: white;
@@ -198,9 +198,9 @@ max-height: 35px;
 
 position: fixed;
 bottom: 2px;
-left: 1%;
-transform: translateX(-1%);
-width: calc(98%);
+left: 2%;
+right:2%;
+width: 96%;
 /* max-width: 600px; */
 padding: 10px;
 }
